Chromium 0.9.12
 - added rudimentary mouse support to menu. Click over a menu item to 
   select it - once selected: left-click increments, right-click decrements.

Chromium 0.9.11a
 - fixed configure script to properly detect SDL version.
Chromium 0.9.11
 - added high scores. Default is to have high scores per-user, but the 
   CHROMIUM_SCORE environment variable can be set to a common file for
   site-wide scores (file must be read/writable for all users, of course).
 - score was not resetting to 0 on new game. oops.
 - if mixed data/music CD tracks, data tracks are now skipped
 - Some code cleanup/rearrangement.

Chromium 0.9.10
 - fixed supershields remaining after suicide 'game over'
 - fixed stupid buffer overflow typo in setup app.
 - put in hack for detecting CD music tracks - SDL is adding 2
   to the track type on some copied CDRs (will be fixed in SDL 1.1.7+)
 - added support for setting CDROM volume through AL extensions. 
 - fixed up Win32 build
 - some GL tweaks to improve visuals on 1.1 GL drivers.
 - fixed audio destructor from bombing when audio is disabled.
 - added Macintosh changes from Max Horn.
 - stopped modifying musicMax with playlist when CD is enabled.
 - added SDL_mixer option from Darrell Walisser so there is a decent
   audio option for those platforms that OpenAL doesn't support very well.
 - rearranged the Audio class because things were getting too messy.

Chromium 0.9.9c
 - fixed persistent exhaust when game over
 - fixed CDROM w/ data only tracks
 - added half-assed check for Qt in configure, and made it an enable option.
Chromium 0.9.9b
 - added Qt version check for using QSGIStyle in the setup app
Chromium 0.9.9a
 - changed 'configure' to './configure' for OPENAL_CONFIG_OPTS in config.mak
 - fixed 'suicide while dead' bug. 
Chromium 0.9.9
 - added CD music support
 - added PlayList support - a simple list of WAV, MP3 and/or OGG files 
   (depending on what options are compiled into OpenAL) that are used
   for background music.