@@ -45,7 +45,7 @@ LIBS		= $$LIBDIRS $(GL_LIBS) $(AL_LIBS) $(SDL_LIBS) $(SMPEG_LIBS) $(VORBIS_LIBS)
 ##DEFINES 	= _REENTRANT AUDIO_SDLMIXER AUDIO_OPENAL CHECK_ERRORS NO_PARACHUTE
 #-- Release --
 CONFIG		= warn_off release
-DEFINES 	= _REENTRANT AUDIO_OPENAL
+DEFINES 	= OLD_OPENAL AUDIO_OPENAL _REENTRANT 
 
 ##############################
 ## IRIX
