@@ -1,6 +1,6 @@
 #############################################################################
 # Makefile for building chromium
-# Generated by tmake at 22:09, 2001/04/11
+# Generated by tmake at 20:45, 2001/04/28
 #     Project: CHROMIUM
 #    Template: app
 #############################################################################
@@ -10,8 +10,8 @@ include ../config.mak
 
 CC	=	gcc
 CXX	=	g++
-CFLAGS	=	-pipe $(PKG_CFLAGS) $(SDL_CFLAGS) $(SMPEG_CFLAGS) -O2 -D_REENTRANT -DAUDIO_OPENAL
-CXXFLAGS=	-pipe $(PKG_CFLAGS) $(SDL_CFLAGS) $(SMPEG_CFLAGS) -O2 -D_REENTRANT -DAUDIO_OPENAL
+CFLAGS	=	-pipe $(PKG_CFLAGS) $(SDL_CFLAGS) $(SMPEG_CFLAGS) -O2 -DOLD_OPENAL -DAUDIO_OPENAL -D_REENTRANT
+CXXFLAGS=	-pipe $(PKG_CFLAGS) $(SDL_CFLAGS) $(SMPEG_CFLAGS) -O2 -DOLD_OPENAL -DAUDIO_OPENAL -D_REENTRANT
 INCPATH	=	-I../support/include -I../support/glpng/include -I../support/openal/include -I../support/openal/linux/include -I/usr/X11R6/include
 LINK	=	g++
 LFLAGS	=	
